--- a/gold-admin-frontend/src/app/views/partials/components/bank-details/bank-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/bank-details/bank-details.component.html
@@ -130,8 +130,7 @@
                                 <label class="mandatory kt-padding-l-10">Upload Passbook / Bank Statement / Cancel
                                     Cheque</label>
                             </div>
-                            <div class="col-6 mb-3"
-                                *ngIf="!disable">
+                            <div class="col-6 mb-3" *ngIf="!disable">
                                 <div class="input-group">
                                     <input type="text" class="form-control" placeholder="Select File"
                                         aria-label="Recipient's username" aria-describedby="basic-addon2" readonly
