--- a/gold-admin-frontend/src/app/views/partials/components/bank-details/bank-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/bank-details/bank-details.component.html
@@ -163,10 +163,18 @@
                                     <div *ngIf="controls.passbookProofImage.value.length" class="">
                                         <div class="d-inline-block img-container kt-margin-r-15"
                                             *ngFor="let proof of controls.passbookProofImage.value; index as idx;">
-                                            <img class="fetched-image" [src]="proof">
+                                            <img class="fetched-image" (click)="preview(proof)" [src]="proof"
+                                                *ngIf="!(proof.split('.')[1] == 'pdf')">
                                             <img src="../../../../../assets/media/icons/cancel.svg" alt=""
                                                 *ngIf="!disable" class="kt-pointer remove-icon"
                                                 (click)="removeImages(idx);">
+                                            <div class="iframeWrapper" (click)="preview(proof)">
+                                                <iframe
+                                                    [src]="controls?.passbookProofImage?.value | safe : 'resourceUrl'"
+                                                    height="250" width="290" scrolling="no"
+                                                    *ngIf="proof.split('.')[1] == 'pdf'"
+                                                    class="position-relative"></iframe>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
