--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer-list/loan-transfer-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer-list/loan-transfer-list.component.html
@@ -72,7 +72,7 @@
                                 (click)="navigate(loan)">Appraiser Rating</button>
                             <button [class.cursor-not-allowed]="!permission.loanTransferRating"
                                 class="primary-button btn-width"
-                                *ngIf="loan?.loanTransfer?.loanTransferCurrentStage == '4'" (click)="navigate(loan)">B.M
+                                *ngIf="loan?.loanTransfer?.loanTransferCurrentStage == '4'" (click)="navigate(loan)">BM
                                 Rating</button>
                             <button [class.cursor-not-allowed]="!permission.loanTransferDisbursal"
                                 class="warning-button btn-width"
