appraiser status in filtered data

--- a/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
@@ -158,7 +158,7 @@
 
                     <!-- appliedLoan -->
                     <div class="filtered-data" *ngIf="filteredList?.appraiserStatus">
-                        <div class="filtered-title">By CCE Status</div>
+                        <div class="filtered-title">By Appraiser Status</div>
                         <div class="d-flex">
                             <div class="filtered-value"
                                 *ngFor="let item of filteredList?.appraiserStatus; let i = index;">
