bm::permissions loandetails, appliedkyc

--- a/gold-admin-frontend/src/app/views/pages/admin/applied-kyc/applied-kyc.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/applied-kyc/applied-kyc.component.html
@@ -142,9 +142,10 @@
                                 <mat-icon>more_vert</mat-icon>
                             </button>
                             <mat-menu #menu="matMenu" xPosition="before">
-                                <button mat-menu-item (click)="applyLoan(role)">Apply Loan</button>
-                                <button *ngxPermissionsOnly="['loanTransferAppraiserRating']" mat-menu-item
-                                    (click)="transferLoan(role)">Transfer Loan</button>
+                                <button *ngxPermissionsOnly="['loanApplicationAdd']" mat-menu-item
+                                    (click)="applyLoan(role)">Apply Loan</button>
+                                <button *ngxPermissionsOnly="['addLoanTransfer', 'loanTransferAppraiserRating']"
+                                    mat-menu-item (click)="transferLoan(role)">Transfer Loan</button>
                                 <button mat-menu-item (click)="applyScrapBuy(role)">Apply Scrap Buy</button>
                             </mat-menu>
                         </ng-container>
