--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/view-location/view-location.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/view-location/view-location.component.scss
@@ -5,12 +5,13 @@
     }
     .pos {
         position   : absolute;
-        top        : 20px;
-        right      : 30px;
+        top: 3px;
+        left: 50%;
+        transform: translate(-50%, 0);
         font-weight: 500;
         font-size  : 14px;
-         z-index: 100 !important; 
-         letter-spacing: 1.1px;
+        z-index: 100 !important; 
+        letter-spacing: 1.1px;
     }
 
 }
