bm::bank pdf fix, approval incomplete view

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.scss
@@ -25,6 +25,10 @@
     }
     .mat-column-actions{
         flex:0 0 13% !important;
+
+        button {
+            width: 140px;
+        }
     }
   
     .mat-column-customerID{
