--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/customer-management/customer-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/customer-management/customer-management.component.html
@@ -33,8 +33,8 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let list">
                         <div [ngStyle]="{'display': 'inherit'}" *ngIf="!list.packetAssigned">
-                            <!-- <span class="kt-pointer" (click)="viewScrap(list)">View</span>
-                            <div class="px-2">|</div> -->
+                            <span class="kt-pointer" (click)="viewDetails(list.id)">View</span>
+                            <div class="px-2">|</div>
                             <span class="kt-pointer" (click)="newScrap(list)">Add</span>
                         </div>
                     </mat-cell>
