--- a/gold-admin-frontend/src/app/views/partials/components/customer-details/customer-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/customer-details/customer-details.component.html
@@ -5,21 +5,21 @@
                 <div class="col">
                     <div class="row">
                         <div class="col-1">
-                            <img class="kt-margin-t-10 profile" [src]="cutomerDetails.customerKycPersonal.profileImg">
+                            <img class="kt-margin-t-10 profile" [src]="cutomerDetails?.customerKycPersonal?.profileImg">
                             <!-- <img [src]="customer.image" *ngIf="customer.image != '' || customer.image != null"> -->
                         </div>
                         <div class="col kt-padding-l-25">
                             <div class="kt-margin-t-30 text-gray font-weight-500 kt-margin-b-5">Customer ID</div>
-                            <div class="text-color font-weight-500">{{cutomerDetails.customerUniqueId}}</div>
+                            <div class="text-color font-weight-500">{{cutomerDetails?.customerUniqueId}}</div>
                         </div>
                         <div class="col">
                             <div class="kt-margin-t-30 text-gray font-weight-500 kt-margin-b-5">Customer Name</div>
-                            <div class="text-color font-weight-500">{{cutomerDetails.firstName | titlecase}}
-                                {{cutomerDetails.lastName | titlecase}}</div>
+                            <div class="text-color font-weight-500">{{cutomerDetails?.firstName | titlecase}}
+                                {{cutomerDetails?.lastName | titlecase}}</div>
                         </div>
                         <div class="col">
                             <div class="kt-margin-t-30 text-gray font-weight-500 kt-margin-b-5">Pan</div>
-                            <div class="text-color font-weight-500">{{cutomerDetails.panCardNumber}}</div>
+                            <div class="text-color font-weight-500">{{cutomerDetails?.panCardNumber}}</div>
                         </div>
                     </div>
                 </div>
